add environment variables support
