# pb/api.pb.go
@@ -142,9 +142,57 @@ func (m *Signal) GetSignal() int32 {
 	return 0
 }
 
+type ProcEnv struct {
+	EnvVars              []string `protobuf:"bytes,1,rep,name=envVars,proto3" json:"envVars,omitempty"`
+	WorkingDir           string   `protobuf:"bytes,2,opt,name=workingDir,proto3" json:"workingDir,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ProcEnv) Reset()         { *m = ProcEnv{} }
+func (m *ProcEnv) String() string { return proto.CompactTextString(m) }
+func (*ProcEnv) ProtoMessage()    {}
+func (*ProcEnv) Descriptor() ([]byte, []int) {
+	return fileDescriptor_b0bcca62df7aeb4c, []int{3}
+}
+
+func (m *ProcEnv) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ProcEnv.Unmarshal(m, b)
+}
+func (m *ProcEnv) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ProcEnv.Marshal(b, m, deterministic)
+}
+func (m *ProcEnv) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ProcEnv.Merge(m, src)
+}
+func (m *ProcEnv) XXX_Size() int {
+	return xxx_messageInfo_ProcEnv.Size(m)
+}
+func (m *ProcEnv) XXX_DiscardUnknown() {
+	xxx_messageInfo_ProcEnv.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ProcEnv proto.InternalMessageInfo
+
+func (m *ProcEnv) GetEnvVars() []string {
+	if m != nil {
+		return m.EnvVars
+	}
+	return nil
+}
+
+func (m *ProcEnv) GetWorkingDir() string {
+	if m != nil {
+		return m.WorkingDir
+	}
+	return ""
+}
+
 type SetProc struct {
 	Create               bool     `protobuf:"varint,1,opt,name=create,proto3" json:"create,omitempty"`
 	Process              *Process `protobuf:"bytes,2,opt,name=process,proto3" json:"process,omitempty"`
+	Env                  *ProcEnv `protobuf:"bytes,3,opt,name=env,proto3" json:"env,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -154,7 +202,7 @@ func (m *SetProc) Reset()         { *m = SetProc{} }
 func (m *SetProc) String() string { return proto.CompactTextString(m) }
 func (*SetProc) ProtoMessage()    {}
 func (*SetProc) Descriptor() ([]byte, []int) {
-	return fileDescriptor_b0bcca62df7aeb4c, []int{3}
+	return fileDescriptor_b0bcca62df7aeb4c, []int{4}
 }
 
 func (m *SetProc) XXX_Unmarshal(b []byte) error {
@@ -189,6 +237,13 @@ func (m *SetProc) GetProcess() *Process {
 	return nil
 }
 
+func (m *SetProc) GetEnv() *ProcEnv {
+	if m != nil {
+		return m.Env
+	}
+	return nil
+}
+
 type ProcStatus struct {
 	Pid                  int32    `protobuf:"varint,1,opt,name=pid,proto3" json:"pid,omitempty"`
 	State                string   `protobuf:"bytes,2,opt,name=state,proto3" json:"state,omitempty"`
@@ -203,7 +258,7 @@ func (m *ProcStatus) Reset()         { *m = ProcStatus{} }
 func (m *ProcStatus) String() string { return proto.CompactTextString(m) }
 func (*ProcStatus) ProtoMessage()    {}
 func (*ProcStatus) Descriptor() ([]byte, []int) {
-	return fileDescriptor_b0bcca62df7aeb4c, []int{4}
+	return fileDescriptor_b0bcca62df7aeb4c, []int{5}
 }
 
 func (m *ProcStatus) XXX_Unmarshal(b []byte) error {
@@ -256,7 +311,6 @@ type Process struct {
 	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	CommandLine          string   `protobuf:"bytes,2,opt,name=commandLine,proto3" json:"commandLine,omitempty"`
 	LoggerCommandLine    string   `protobuf:"bytes,3,opt,name=loggerCommandLine,proto3" json:"loggerCommandLine,omitempty"`
-	WorkingDir           string   `protobuf:"bytes,4,opt,name=workingDir,proto3" json:"workingDir,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -266,7 +320,7 @@ func (m *Process) Reset()         { *m = Process{} }
 func (m *Process) String() string { return proto.CompactTextString(m) }
 func (*Process) ProtoMessage()    {}
 func (*Process) Descriptor() ([]byte, []int) {
-	return fileDescriptor_b0bcca62df7aeb4c, []int{5}
+	return fileDescriptor_b0bcca62df7aeb4c, []int{6}
 }
 
 func (m *Process) XXX_Unmarshal(b []byte) error {
@@ -308,13 +362,6 @@ func (m *Process) GetLoggerCommandLine() string {
 	return ""
 }
 
-func (m *Process) GetWorkingDir() string {
-	if m != nil {
-		return m.WorkingDir
-	}
-	return ""
-}
-
 type ProcName struct {
 	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
@@ -326,7 +373,7 @@ func (m *ProcName) Reset()         { *m = ProcName{} }
 func (m *ProcName) String() string { return proto.CompactTextString(m) }
 func (*ProcName) ProtoMessage()    {}
 func (*ProcName) Descriptor() ([]byte, []int) {
-	return fileDescriptor_b0bcca62df7aeb4c, []int{6}
+	return fileDescriptor_b0bcca62df7aeb4c, []int{7}
 }
 
 func (m *ProcName) XXX_Unmarshal(b []byte) error {
@@ -366,7 +413,7 @@ func (m *ProcessesStatus) Reset()         { *m = ProcessesStatus{} }
 func (m *ProcessesStatus) String() string { return proto.CompactTextString(m) }
 func (*ProcessesStatus) ProtoMessage()    {}
 func (*ProcessesStatus) Descriptor() ([]byte, []int) {
-	return fileDescriptor_b0bcca62df7aeb4c, []int{7}
+	return fileDescriptor_b0bcca62df7aeb4c, []int{8}
 }
 
 func (m *ProcessesStatus) XXX_Unmarshal(b []byte) error {
@@ -398,6 +445,7 @@ func init() {
 	proto.RegisterType((*Nope)(nil), "pb.Nope")
 	proto.RegisterType((*Result)(nil), "pb.Result")
 	proto.RegisterType((*Signal)(nil), "pb.Signal")
+	proto.RegisterType((*ProcEnv)(nil), "pb.ProcEnv")
 	proto.RegisterType((*SetProc)(nil), "pb.SetProc")
 	proto.RegisterType((*ProcStatus)(nil), "pb.ProcStatus")
 	proto.RegisterType((*Process)(nil), "pb.Process")
@@ -408,41 +456,43 @@ func init() {
 func init() { proto.RegisterFile("pb/api.proto", fileDescriptor_b0bcca62df7aeb4c) }
 
 var fileDescriptor_b0bcca62df7aeb4c = []byte{
-	// 534 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x54, 0xdd, 0x8a, 0x13, 0x31,
-	0x14, 0x66, 0xda, 0xe9, 0x6c, 0x7b, 0x66, 0x5a, 0xb7, 0xd9, 0x45, 0x6b, 0x91, 0x65, 0x08, 0x08,
-	0xa5, 0x48, 0x07, 0xaa, 0x57, 0x82, 0x68, 0xdd, 0x15, 0x57, 0x58, 0x96, 0x32, 0xc5, 0x07, 0x48,
-	0x27, 0x61, 0x1c, 0x4c, 0x27, 0x61, 0x92, 0xa2, 0xd7, 0xde, 0x7b, 0x21, 0x3e, 0x9a, 0xaf, 0xe0,
-	0x83, 0x48, 0x92, 0x99, 0x75, 0xdc, 0x5d, 0x5d, 0xef, 0x4e, 0x4e, 0xbe, 0xef, 0xcb, 0x77, 0x7e,
-	0x08, 0x44, 0x72, 0x9b, 0x10, 0x59, 0x2c, 0x64, 0x25, 0xb4, 0x40, 0x1d, 0xb9, 0x9d, 0x3e, 0xca,
-	0x85, 0xc8, 0x39, 0x33, 0xd9, 0x84, 0x94, 0xa5, 0xd0, 0x44, 0x17, 0xa2, 0x54, 0x0e, 0x81, 0x03,
-	0xf0, 0x2f, 0x85, 0x64, 0x78, 0x0e, 0x41, 0xca, 0xd4, 0x9e, 0x6b, 0x14, 0x43, 0x48, 0x99, 0xca,
-	0xaa, 0x42, 0x1a, 0xdc, 0xc4, 0x8b, 0xbd, 0xd9, 0x20, 0x6d, 0xa7, 0xf0, 0x33, 0x08, 0x36, 0x45,
-	0x5e, 0x12, 0x8e, 0x10, 0xf8, 0x25, 0xd9, 0xb1, 0x1a, 0x64, 0x63, 0x74, 0x1f, 0x02, 0x65, 0x6f,
-	0x27, 0x9d, 0xd8, 0x9b, 0xf5, 0xd2, 0xfa, 0x84, 0xcf, 0xe1, 0x60, 0xc3, 0xf4, 0xba, 0x12, 0x99,
-	0x81, 0x64, 0x15, 0x23, 0xda, 0x11, 0xfb, 0x69, 0x7d, 0x42, 0x8f, 0xe1, 0x40, 0x56, 0x22, 0x63,
-	0x4a, 0x59, 0x6e, 0xb8, 0x0c, 0x17, 0x72, 0xbb, 0x58, 0xbb, 0x54, 0xda, 0xdc, 0x61, 0x05, 0x60,
-	0x72, 0x1b, 0x4d, 0xf4, 0x5e, 0xa1, 0x43, 0xe8, 0xca, 0x82, 0x5a, 0xa5, 0x5e, 0x6a, 0x42, 0x74,
-	0x0c, 0x3d, 0xa5, 0x8d, 0x7a, 0xc7, 0xda, 0x72, 0x87, 0xb6, 0x78, 0xf7, 0xef, 0xe2, 0xc6, 0x1b,
-	0xfb, 0x5c, 0x68, 0x46, 0x27, 0xbe, 0xf3, 0xe6, 0x4e, 0xf8, 0xab, 0x07, 0x07, 0x35, 0xf8, 0xd6,
-	0xb2, 0x63, 0x08, 0x33, 0xb1, 0xdb, 0x91, 0x92, 0x5e, 0x14, 0x65, 0xf3, 0x74, 0x3b, 0x85, 0x9e,
-	0xc0, 0x98, 0x8b, 0x3c, 0x67, 0xd5, 0x69, 0x0b, 0xd7, 0xb5, 0xb8, 0x9b, 0x17, 0xe8, 0x04, 0xe0,
-	0x93, 0xa8, 0x3e, 0x16, 0x65, 0x7e, 0x56, 0x54, 0xd6, 0xcb, 0x20, 0x6d, 0x65, 0xf0, 0x09, 0xf4,
-	0x8d, 0x9d, 0x4b, 0xf3, 0xf6, 0x2d, 0x7e, 0xf0, 0x0b, 0xb8, 0x57, 0xdb, 0x65, 0xaa, 0xee, 0xd4,
-	0x1c, 0xfa, 0xca, 0x46, 0x4c, 0x4d, 0xbc, 0xb8, 0x3b, 0x0b, 0x97, 0xa3, 0xa6, 0x05, 0x0e, 0x91,
-	0x5e, 0xdd, 0x2f, 0xbf, 0xf9, 0x00, 0xa7, 0xa2, 0xd4, 0x95, 0xe0, 0xab, 0xf5, 0x3b, 0xb4, 0x82,
-	0xe8, 0xc2, 0x5a, 0xac, 0x07, 0x0f, 0x86, 0xe8, 0xe2, 0xa9, 0x8d, 0xdd, 0xf2, 0xe0, 0x87, 0x5f,
-	0x7e, 0xfc, 0xfc, 0xde, 0x39, 0xc2, 0xa3, 0xc4, 0x55, 0x94, 0xb8, 0xe1, 0x3f, 0xf7, 0xe6, 0xe8,
-	0x15, 0x0c, 0x6b, 0x43, 0x77, 0x68, 0x3c, 0xb0, 0x1a, 0x63, 0x1c, 0x25, 0x66, 0x26, 0x7f, 0x28,
-	0x44, 0x2b, 0xce, 0xaf, 0xaa, 0x42, 0x7d, 0x43, 0x32, 0xdb, 0x3b, 0x3d, 0x6a, 0x8d, 0xb2, 0x29,
-	0x17, 0x8f, 0xad, 0x4e, 0x88, 0x03, 0xab, 0xa3, 0x8c, 0xc2, 0x02, 0xfc, 0x73, 0xc2, 0x75, 0x8b,
-	0xd9, 0x7e, 0xf8, 0xd0, 0x12, 0x00, 0xf7, 0x92, 0x0f, 0x84, 0x6b, 0x83, 0x7f, 0x09, 0xb0, 0xa2,
-	0xb4, 0x19, 0xbb, 0x5d, 0x98, 0x7a, 0x87, 0xa7, 0xd7, 0x5a, 0x87, 0x8f, 0x2d, 0x79, 0x84, 0x07,
-	0xce, 0x35, 0xa1, 0xd4, 0x08, 0xbc, 0x81, 0xe1, 0x7b, 0x49, 0x89, 0x66, 0xff, 0xa5, 0x71, 0xad,
-	0xf2, 0xbd, 0x65, 0x1a, 0x99, 0xd7, 0x30, 0x3c, 0x63, 0x9c, 0xfd, 0x96, 0x89, 0x1a, 0xa6, 0x99,
-	0xff, 0xbf, 0xba, 0x47, 0x2d, 0xcd, 0x75, 0x0f, 0xde, 0xba, 0x77, 0x6f, 0x0a, 0xdc, 0x51, 0x4c,
-	0xce, 0x4c, 0x37, 0xb6, 0x81, 0xfd, 0x32, 0x9e, 0xfe, 0x0a, 0x00, 0x00, 0xff, 0xff, 0xb1, 0x53,
-	0xec, 0x42, 0x64, 0x04, 0x00, 0x00,
+	// 568 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x54, 0x6d, 0x8b, 0xd3, 0x4e,
+	0x10, 0xa7, 0x4d, 0x9b, 0xb6, 0x93, 0xb6, 0xff, 0xeb, 0xde, 0x71, 0xff, 0x58, 0xf4, 0x28, 0x0b,
+	0x42, 0x29, 0xd2, 0x40, 0xf5, 0x95, 0x20, 0x5a, 0x7b, 0x45, 0x85, 0xe3, 0x28, 0x29, 0xfa, 0x7e,
+	0xdb, 0x2c, 0x31, 0x98, 0xee, 0x86, 0xec, 0xb6, 0xfa, 0xda, 0x6f, 0x20, 0x7e, 0x34, 0xbf, 0x82,
+	0x1f, 0x44, 0x66, 0x37, 0x39, 0x73, 0x0f, 0xdc, 0xf9, 0x6e, 0x67, 0xf6, 0xf7, 0x30, 0x33, 0x3b,
+	0x09, 0x74, 0xb3, 0x4d, 0xc0, 0xb2, 0x64, 0x9a, 0xe5, 0x52, 0x4b, 0x52, 0xcf, 0x36, 0xc3, 0xc7,
+	0xb1, 0x94, 0x71, 0xca, 0x31, 0x1b, 0x30, 0x21, 0xa4, 0x66, 0x3a, 0x91, 0x42, 0x59, 0x04, 0x75,
+	0xa1, 0x71, 0x29, 0x33, 0x4e, 0x27, 0xe0, 0x86, 0x5c, 0xed, 0x53, 0x4d, 0x46, 0xe0, 0x45, 0x5c,
+	0x6d, 0xf3, 0x24, 0x43, 0x9c, 0x5f, 0x1b, 0xd5, 0xc6, 0x9d, 0xb0, 0x9a, 0xa2, 0x2f, 0xc0, 0x5d,
+	0x27, 0xb1, 0x60, 0x29, 0x21, 0xd0, 0x10, 0x6c, 0xc7, 0x0b, 0x90, 0x39, 0x93, 0x53, 0x70, 0x95,
+	0xb9, 0xf5, 0xeb, 0xa3, 0xda, 0xb8, 0x19, 0x16, 0x11, 0x5d, 0x40, 0x6b, 0x95, 0xcb, 0xed, 0x52,
+	0x1c, 0x88, 0x0f, 0x2d, 0x2e, 0x0e, 0x9f, 0x58, 0xae, 0xfc, 0xda, 0xc8, 0x19, 0x77, 0xc2, 0x32,
+	0x24, 0x67, 0x00, 0x5f, 0x65, 0xfe, 0x25, 0x11, 0xf1, 0x79, 0x92, 0x1b, 0x81, 0x4e, 0x58, 0xc9,
+	0xd0, 0x18, 0x5a, 0x6b, 0xae, 0x51, 0x07, 0x7d, 0xb6, 0x39, 0x67, 0xda, 0xba, 0xb7, 0xc3, 0x22,
+	0x22, 0x4f, 0xa1, 0x95, 0xe5, 0x72, 0xcb, 0x95, 0x32, 0x7c, 0x6f, 0xe6, 0x4d, 0xb3, 0xcd, 0x74,
+	0x65, 0x53, 0x61, 0x79, 0x47, 0x9e, 0x80, 0xc3, 0xc5, 0xc1, 0x77, 0xae, 0x43, 0x96, 0xe2, 0x10,
+	0x62, 0x9e, 0x2a, 0x00, 0x8c, 0xd7, 0x9a, 0xe9, 0xbd, 0x22, 0x47, 0xe0, 0x64, 0x49, 0x64, 0x8c,
+	0x9a, 0x21, 0x1e, 0xc9, 0x09, 0x34, 0x95, 0x46, 0x73, 0x5b, 0xa3, 0x0d, 0xaa, 0xde, 0xce, 0x3d,
+	0xde, 0xa7, 0xe0, 0xf2, 0x6f, 0x89, 0xe6, 0x91, 0xdf, 0xb0, 0xa5, 0xdb, 0x88, 0xee, 0xec, 0x88,
+	0x10, 0x72, 0xd7, 0x64, 0x47, 0xe0, 0x6d, 0xe5, 0x6e, 0xc7, 0x44, 0x74, 0x91, 0x88, 0xd2, 0xb9,
+	0x9a, 0x22, 0xcf, 0x60, 0x90, 0xca, 0x38, 0xe6, 0xf9, 0xa2, 0x82, 0x73, 0x0c, 0xee, 0xf6, 0x05,
+	0x3d, 0x83, 0x36, 0xda, 0x5d, 0xa2, 0xf6, 0x1d, 0x7e, 0xf4, 0x15, 0xfc, 0x57, 0x94, 0xc3, 0x55,
+	0x31, 0x88, 0x09, 0xb4, 0x95, 0x39, 0x71, 0xfb, 0x74, 0xde, 0xac, 0x5f, 0x76, 0x68, 0x11, 0xe1,
+	0xd5, 0xfd, 0xec, 0x47, 0x03, 0x60, 0x21, 0x85, 0xce, 0x65, 0x3a, 0x5f, 0x7d, 0x20, 0x73, 0xe8,
+	0x5e, 0x98, 0x12, 0x8a, 0xdd, 0x01, 0x24, 0xda, 0xf3, 0xd0, 0x9c, 0xed, 0xfe, 0xd1, 0x47, 0xdf,
+	0x7f, 0xfd, 0xfe, 0x59, 0x3f, 0xa6, 0xfd, 0xc0, 0x56, 0x1c, 0xd8, 0xfd, 0x79, 0x59, 0x9b, 0x90,
+	0x37, 0xd0, 0x2b, 0x0a, 0x7a, 0x40, 0xe3, 0x7f, 0xa3, 0x31, 0xa0, 0xdd, 0x00, 0x47, 0x7e, 0x4d,
+	0xa1, 0x3b, 0x4f, 0xd3, 0xab, 0xae, 0x48, 0x1b, 0x49, 0xf8, 0x01, 0x0c, 0x8f, 0x2b, 0x2f, 0x55,
+	0xb6, 0x4b, 0x07, 0x46, 0xc7, 0xa3, 0xae, 0xd1, 0x51, 0xa8, 0x30, 0x85, 0xc6, 0x7b, 0x96, 0xea,
+	0x0a, 0xb3, 0x6a, 0x7c, 0x64, 0x08, 0x40, 0x9b, 0xc1, 0x67, 0x96, 0x6a, 0xc4, 0xbf, 0x06, 0x98,
+	0x47, 0x51, 0xf9, 0xac, 0x66, 0x1f, 0x8a, 0x0d, 0x1e, 0xde, 0x18, 0x1d, 0x3d, 0x31, 0xe4, 0x3e,
+	0xed, 0xd8, 0xaa, 0x59, 0x14, 0xa1, 0xc0, 0x12, 0x7a, 0x1f, 0xb3, 0x88, 0x69, 0xfe, 0x4f, 0x1a,
+	0x37, 0x3a, 0xdf, 0x1b, 0x26, 0xca, 0xbc, 0x85, 0xde, 0x39, 0x4f, 0xf9, 0x5f, 0x99, 0x6e, 0xc9,
+	0xc4, 0xf7, 0xbf, 0x6f, 0x7a, 0x91, 0xa1, 0xd9, 0xe9, 0xc1, 0x3b, 0xeb, 0x7b, 0x5b, 0xe0, 0x81,
+	0x66, 0x62, 0x8e, 0xd3, 0xd8, 0xb8, 0xe6, 0xaf, 0xf3, 0xfc, 0x4f, 0x00, 0x00, 0x00, 0xff, 0xff,
+	0xd4, 0x9e, 0xa2, 0x59, 0xa7, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
